# GPU-Memory-Aware-Request-Scheduler-with-KV-Cache-Offloading-for-Multi-Tenant-LLM-Serving

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: bench_context_swap.py
csrc/: bindings.cpp  context_swap_kernel.cu
docs/: SCHEDULING_ALGORITHM.md
results/: scheduling_trace.json  swap_latency.json
scripts/: simulate_workload.py
src/: __init__.py  context_swap_ref.py  ops.py  priority_queue_ref.py  scheduler_ref.py  vllm_integration.py
tests/: __init__.py  test_context_swap.py  test_priority_queue.py  test_scheduler.py  test_vllm_integration.py
