[build-system]
requires = ["setuptools>=65.0", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "context-swapping"
version = "0.1.0"
description = "Request-level context swapping for multi-tenant LLM serving"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Context Swapping Team", email = "team@example.com"}
]
keywords = ["cuda", "llm", "serving", "scheduling", "context-swapping", "multi-tenant"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
]
cuda = [
    "torch>=2.0.0",
]
vllm = [
    "vllm>=0.3.0",
    "transformers>=4.30.0",
]

[tool.setuptools]
packages = ["context_swapping"]
package-dir = {"context_swapping" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--verbose --tb=short"
